--- a/contact-us.html
+++ b/contact-us.html
@@ -350,7 +350,7 @@
                                     <p><i class="fa fa-fax"></i> 920016626 +</p>
                                 </li>
                                 <li><h3>EMAIL:</h3>
-                                    <p><i class="fa fa-envelope"></i>ceo@servers.com.sa</p>
+                                    <p><i class="fa fa-envelope"></i>ceo@logoTaha.com.sa</p>
                                 </li>
                             </ul>
                             
